<resources>
    <string name="app_name">ResCovery</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_add">Add</string>
    <string name="title_message">Message</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
<<<<<<< HEAD
<<<<<<< HEAD

    <string-array name="restaurant_names_spinner">
        <item>Select Restaurant</item>
        <item>A&amp;W Canada</item>
        <item>Bamboo Garden Restaurant</item>
        <item>BierCraft UniverCity</item>
        <item>Chef Hung Taiwanese Beef Noodle</item>
        <item>Donair Town</item>
        <item>Gawon Express Korean Cuisine</item>
        <item>Japarrito</item>
        <item>Mad Chicken SFU</item>
        <item>Noodle Waffle Cafe</item>
        <item>PHO 99</item>
        <item>Pizza Hut</item>
        <item>Plum Garden &amp; CHAKURA</item>
        <item>Quesada Burritos &amp; Tacos</item>
        <item>SFU Dining Commons</item>
        <item>Steve\'s Poke Bar</item>
        <item>Subway</item>
        <item>Tim Hortons</item>
        <item>Togo Sushi SFU</item>
        <item>Uncle Faith\'s Pizza</item>
    </string-array>

=======
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
>>>>>>> parent of 948fe69 (Revert "panteha's second commit for milestone 2")
=======
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
>>>>>>> parent of 948fe69 (Revert "panteha's second commit for milestone 2")
</resources>