<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/favorite"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/add"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/message"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />

</menu>